# laboratory_works

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/tests/: test.c  test.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/str/: CMakeLists.txt
libs/str/string/: string_.c  string_.h
libs/str/test_string/: tests.c  tests.h
