add_library(data_structures
        bitset/bitset.c
        bitset/bitset.h
        unordered_array_set/unordered_array_set.h
        unordered_array_set/unordered_array_set.c
        ordered_array_set/ordered_array_set.c
        ordered_array_set/ordered_array_set.h
        vector/vector.h
        vector/vector.c
        matrix/matrix.c
        matrix/matrix.h
)
